--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -30,4 +30,9 @@
             text-decoration: underline;
         }
     }
+    &__icon {
+        &_animeted {
+            animation: heartbeat 1.5s ease infinite;
+        }
+    }
 }
