--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables';
+@import 'base/animations';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
@@ -13,5 +14,10 @@
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
-@import 'base/media';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/_feed';
+@import 'blocks/footer';
+@import 'blocks/modal';
+@import 'blocks/pageup';
+@import 'base/media';
