--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -386,6 +386,7 @@
         min-height: 400px;
         padding: 19px 20px 20px 20px;
         &__close {
+            top: -35px;
             right: 10px;
         }
     }
